--- a/style/geral.css
+++ b/style/geral.css
@@ -1,3 +1,79 @@
 * {
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+section {
+    background-color: #0d1b2a;
+}
+
+.cabecalho {
+    display: flex;
+    width: 100%;
+    height: 5vh;
+    background-color: rgb(70, 0, 70);
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
+.menus {
+    display: flex;
+    list-style: none;
+    gap: 2rem;
+}
+
+.link-nav {
+    text-decoration: none;
+    color: #fff;
+    font-size: 17px;
+    transition: all 0.5s ease;
+    height: 100%;
+    display: block;
+}
+
+.link-nav:hover {
+    color: rgb(161, 161, 161);
+    transform: scale(1.14);
+}
+
+.selecionado {
+    text-decoration: underline;
+}
+
+.w-50 {
+    width: 50%;
+}
+
+.w-full{
+    width: 100%;
+}
+
+.centralizado {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.mb-1{
+    margin-bottom: 1rem;
+}
+
+.flex {
+    display: flex;
+    flex-direction: row;
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+
+.my-1{
+    margin: 1rem 0;
+}
+
+.texto {
+    font-size: 20px;
 }
