--- a/style/home.css
+++ b/style/home.css
@@ -58,7 +58,6 @@
 .div-paragrafo > p {
     margin-bottom: 8px;
     text-indent: 20px;
-    font-size: 17px;
 }
 
 .caixa-trabalhos{
@@ -102,6 +101,113 @@
     padding: 15px 0;
 }
 
+.div-programa{
+    width: 50%;
+}
+
 .texto-programa-atual {
     margin-left: 40px;
+}
+
+.logo-vue {
+    width: 15%;
+}
+
+.img-inova-week {
+    width: 60%;
+}
+
+.img-hobbie {
+    width: 70%;
+}
+
+@media (max-width: 768px) {
+    
+    .sobre-mim{
+        flex-direction: column;
+    }
+
+    .tamanho-padrao-caixa {
+        width: 95%;
+    }
+
+    .caixa{
+        flex-direction: column;
+        border-radius: 15px;
+    }
+
+    .caixa-img {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+
+    .bg-img-perfil { 
+        width: 90%;
+        height: 90%;
+        background-position: center 40%;
+        border-radius: 10px;
+        box-shadow: 0 0 25px rgba(255, 255, 255, 0.2);
+    }
+
+    .caixa-texto{
+        width: 100%;
+        height: 100%;
+        display: inline-block;
+        padding: 10px; 
+        box-sizing: border-box;
+    }
+
+    .caixa-trabalhos{
+        margin-top: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .caixa-empresa {
+        width: 100%;
+    }
+
+    .logo-vue {
+        width: 55%;
+    }
+
+    .caixa-programa-atual{
+        box-sizing: border-box;
+        align-items: center;
+    }
+
+    .div-programa{
+        width: 90%;
+    }
+    
+    .texto-programa-atual {
+        margin-left: 0;
+    }
+
+    .div-pouco-mais {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 10px;
+        box-sizing: border-box;
+    }
+
+    .img-inova-week {
+        width: 90%;
+    }
+
+    .div-hobbie{
+        width: 100%;
+    }
+
+    .img-hobbie{
+        width: 90%;
+    }
 }
