--- a/style/geral.css
+++ b/style/geral.css
@@ -5,6 +5,7 @@
 
 section {
     background-color: #0d1b2a;
+    color: white;
 }
 
 .cabecalho {
@@ -82,6 +83,14 @@ section {
     font-size: 20px;
 }
 
+.tamanho-padrao-caixa {
+    width: 85%;
+}
+
+.w-1-3 {
+    width: 33.33%;
+}
+
 @media (max-width: 768px) {
     .texto {
         font-size: 15px;
@@ -89,5 +98,9 @@ section {
 
     .flex {
         flex-direction: column;
+    }
+
+    .tamanho-padrao-caixa {
+        width: 95%;
     }
 }
