--- a/style/geral.css
+++ b/style/geral.css
@@ -1,106 +1,110 @@
 * {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 section {
-    background-color: #0d1b2a;
-    color: white;
+	background-color: #0d1b2a;
+	color: white;
 }
 
 .cabecalho {
-    display: flex;
-    width: 100%;
-    height: 5vh;
-    background-color: rgb(70, 0, 70);
-    justify-content: center;
-    align-items: center;
-    color: white;
+	display: flex;
+	width: 100%;
+	height: 5vh;
+	background-color: rgb(70, 0, 70);
+	justify-content: center;
+	align-items: center;
+	color: white;
 }
 
 .menus {
-    display: flex;
-    list-style: none;
-    gap: 2rem;
+	display: flex;
+	list-style: none;
+	gap: 2rem;
 }
 
 .link-nav {
-    text-decoration: none;
-    color: #fff;
-    font-size: 17px;
-    transition: all 0.5s ease;
-    height: 100%;
-    display: block;
+	text-decoration: none;
+	color: #fff;
+	font-size: 17px;
+	transition: all 0.5s ease;
+	height: 100%;
+	display: block;
 }
 
 .link-nav:hover {
-    color: rgb(161, 161, 161);
-    transform: scale(1.14);
+	color: rgb(161, 161, 161);
+	transform: scale(1.14);
 }
 
 .selecionado {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 .w-50 {
-    width: 50%;
+	width: 50%;
 }
 
-.w-full{
-    width: 100%;
+.w-full {
+	width: 100%;
 }
 
 .centralizado {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-
-.mb-1{
-    margin-bottom: 1rem;
-}
-
-.flex {
-    display: flex;
-    flex-direction: row;
-}
-
-.flex-col {
-    display: flex;
-    flex-direction: column;
-}
-
-.my-1{
-    margin: 1rem 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
 }
 
 .mb-1 {
-    margin-bottom: 1rem;
+	margin-bottom: 1rem;
+}
+
+.flex {
+	display: flex;
+	flex-direction: row;
+}
+
+.flex-col {
+	display: flex;
+	flex-direction: column;
+}
+
+.my-1 {
+	margin: 1rem 0;
+}
+
+.mb-1 {
+	margin-bottom: 1rem;
 }
 
 .texto {
-    font-size: 20px;
+	font-size: 20px;
 }
 
 .tamanho-padrao-caixa {
-    width: 85%;
+	width: 85%;
 }
 
 .w-1-3 {
-    width: 33.33%;
+	width: 33.33%;
+}
+
+.gap-1 {
+	gap: 1rem;
 }
 
 @media (max-width: 768px) {
-    .texto {
-        font-size: 15px;
-    }
+	.texto {
+		font-size: 15px;
+	}
 
-    .flex {
-        flex-direction: column;
-    }
+	.flex {
+		flex-direction: column;
+	}
 
-    .tamanho-padrao-caixa {
-        width: 95%;
-    }
+	.tamanho-padrao-caixa {
+		width: 95%;
+	}
 }
