--- a/style/contato.css
+++ b/style/contato.css
@@ -15,9 +15,6 @@ section {
 	padding: 15px 20px;
 	width: 100%;
 	box-sizing: border-box;
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
 }
 
 .cabecalho-contato {
@@ -57,11 +54,10 @@ section {
 
 .form-divisao {
 	width: 50%;
-	margin-bottom: 10px;
 }
 
 .button {
-	width: 40%;
+	width: 10%;
 	padding: 10px;
 	margin-top: 20px;
 	border: 0;
@@ -69,6 +65,7 @@ section {
 	transition: all 0.3s;
 	background-color: rgb(70, 0, 70);
 	color: white;
+	font-size: 1.05em;
 }
 
 .button:hover {
@@ -106,5 +103,9 @@ section {
 
 	.label {
 		display: block;
+	}
+
+	.button {
+		width: 40%;
 	}
 }
